corrected frame overlapping with canvas

--- a/src/assets/styles/components/newScrollyteller.css
+++ b/src/assets/styles/components/newScrollyteller.css
@@ -24,7 +24,7 @@ img {
     -ms-animation: fadeIn ease 3s !important;
   }
   .left-side{
-    display: none;
+    display: block;
   }
   @keyframes fadeIn {
     0% {
